Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10719

mspaint: incorrect image resizing

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • None
    • None
    • None

    Description

      If you start image shrinking by dragging bottom blue handle up and release mouse button only when cursor gets past image boundary, the image instead of becoming 1px size (as it needs to be), even grows in size.
      This problem is better described by attached video.
      Version tested: r70390, both with ReactOS and Windows 7.

      Attachments

        Activity

          People

            gyROS Benedikt Freisen
            Vort Vort
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: