[MSPAINT] - fix incorrect image resizing -- patch by Katayama Hirofumi MZ

CORE-10719 #resolve

svn path=/trunk/; revision=74936